// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users.jsx Snapshot: Match admin 1`] = `
Array [
  <h1>
    Users
  </h1>,
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="box-container__toolbox"
      >
        <span
          className="ant-input-group-wrapper ant-input-search"
          style={
            Object {
              "width": 250,
            }
          }
        >
          <span
            className="ant-input-wrapper ant-input-group"
          >
            <span
              className="ant-input-affix-wrapper"
              onMouseUp={[Function]}
              style={null}
            >
              <input
                className="ant-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Search..."
                style={null}
                type="text"
                value=""
              />
              <span
                className="ant-input-suffix"
              >
                <span
                  aria-label="close-circle"
                  className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                  onClick={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <span
              className="ant-input-group-addon"
            >
              <button
                className="ant-btn ant-btn-icon-only ant-input-search-button"
                onClick={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <span
                  aria-label="search"
                  className="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
        <button
          className="ant-btn"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-label="sync"
            className="anticon anticon-sync"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="sync"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
              />
            </svg>
          </span>
          <span>
            Refresh
          </span>
        </button>
      </div>
      <div
        className="ant-table-wrapper"
      >
        <div
          className="ant-spin-nested-loading"
        >
          <div
            className="ant-spin-container"
          >
            <div
              className="ant-table"
            >
              <div
                className="ant-table-container"
              >
                <div
                  className="ant-table-content"
                  onScroll={[Function]}
                  style={Object {}}
                >
                  <table
                    style={
                      Object {
                        "tableLayout": "auto",
                      }
                    }
                  >
                    <colgroup />
                    <thead
                      className="ant-table-thead"
                    >
                      <tr>
                        <th
                          className="ant-table-cell ant-table-column-has-sorters"
                          colSpan={null}
                          onClick={[Function]}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="ant-table-column-sorters"
                          >
                            <span>
                              Name
                            </span>
                            <span
                              className="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                className="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  className="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  className="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          className="ant-table-cell ant-table-column-has-sorters"
                          colSpan={null}
                          onClick={[Function]}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="ant-table-column-sorters"
                          >
                            <span>
                              Email
                            </span>
                            <span
                              className="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                className="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  className="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  className="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          className="ant-table-cell ant-table-column-has-sorters"
                          colSpan={null}
                          onClick={[Function]}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="ant-table-column-sorters"
                          >
                            <span>
                              Role
                            </span>
                            <span
                              className="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                className="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  className="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  className="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          className="ant-table-cell"
                          colSpan={null}
                          rowSpan={null}
                          style={Object {}}
                        >
                          Actions
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      className="ant-table-tbody"
                    >
                      <tr
                        className="ant-table-row ant-table-row-level-0"
                        data-row-key="test-user"
                        onClick={[Function]}
                        style={Object {}}
                      >
                        <td
                          className="ant-table-cell"
                          colSpan={null}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <span>
                            <span
                              className=""
                            >
                              Test
                            </span>
                          </span>
                        </td>
                        <td
                          className="ant-table-cell"
                          colSpan={null}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <span>
                            <span
                              className=""
                            >
                              test@example.org
                            </span>
                          </span>
                        </td>
                        <td
                          className="ant-table-cell"
                          colSpan={null}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <span
                            className="ant-tag ant-tag-has-color"
                            style={
                              Object {
                                "backgroundColor": "#36cfc9",
                              }
                            }
                          >
                            admin
                          </span>
                        </td>
                        <td
                          className="ant-table-cell"
                          colSpan={null}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="table__actions"
                          >
                            <button
                              className="ant-btn ant-btn-circle ant-btn-icon-only"
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                aria-label="edit"
                                className="anticon anticon-edit"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  className=""
                                  data-icon="edit"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                                  />
                                </svg>
                              </span>
                            </button>
                            <span
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            />
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
            <ul
              className="ant-pagination ant-table-pagination ant-table-pagination-center"
              style={Object {}}
              unselectable="unselectable"
            >
              <li
                aria-disabled={true}
                className="ant-pagination-prev ant-pagination-disabled"
                onClick={[Function]}
                onKeyPress={[Function]}
                tabIndex={null}
                title="Previous Page"
              >
                <button
                  className="ant-pagination-item-link"
                  disabled={true}
                  tabIndex={-1}
                  type="button"
                >
                  <span
                    aria-label="left"
                    className="anticon anticon-left"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="left"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li
                className="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                onClick={[Function]}
                onKeyPress={[Function]}
                tabIndex="0"
                title={1}
              >
                <a
                  rel="nofollow"
                >
                  1
                </a>
              </li>
              <li
                aria-disabled={true}
                className="ant-pagination-next ant-pagination-disabled"
                onClick={[Function]}
                onKeyPress={[Function]}
                tabIndex={null}
                title="Next Page"
              >
                <button
                  className="ant-pagination-item-link"
                  disabled={true}
                  tabIndex={-1}
                  type="button"
                >
                  <span
                    aria-label="right"
                    className="anticon anticon-right"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="right"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="button-action"
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <div
      className=""
    >
      <button
        className="ant-btn ant-btn-primary ant-btn-circle ant-btn-icon-only button"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-label="plus"
          className="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Users.jsx Snapshot: Match user 1`] = `
Array [
  <h1>
    Users
  </h1>,
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="box-container__toolbox"
      >
        <span
          className="ant-input-group-wrapper ant-input-search"
          style={
            Object {
              "width": 250,
            }
          }
        >
          <span
            className="ant-input-wrapper ant-input-group"
          >
            <span
              className="ant-input-affix-wrapper"
              onMouseUp={[Function]}
              style={null}
            >
              <input
                className="ant-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Search..."
                style={null}
                type="text"
                value=""
              />
              <span
                className="ant-input-suffix"
              >
                <span
                  aria-label="close-circle"
                  className="anticon anticon-close-circle ant-input-clear-icon-hidden ant-input-clear-icon"
                  onClick={[Function]}
                  role="button"
                  tabIndex={-1}
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </span>
            <span
              className="ant-input-group-addon"
            >
              <button
                className="ant-btn ant-btn-icon-only ant-input-search-button"
                onClick={[Function]}
                onMouseDown={[Function]}
                type="button"
              >
                <span
                  aria-label="search"
                  className="anticon anticon-search"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
        <button
          className="ant-btn"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-label="sync"
            className="anticon anticon-sync"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="sync"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M168 504.2c1-43.7 10-86.1 26.9-126 17.3-41 42.1-77.7 73.7-109.4S337 212.3 378 195c42.4-17.9 87.4-27 133.9-27s91.5 9.1 133.8 27A341.5 341.5 0 01755 268.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.7 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c0-6.7-7.7-10.5-12.9-6.3l-56.4 44.1C765.8 155.1 646.2 92 511.8 92 282.7 92 96.3 275.6 92 503.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8zm756 7.8h-60c-4.4 0-7.9 3.5-8 7.8-1 43.7-10 86.1-26.9 126-17.3 41-42.1 77.8-73.7 109.4A342.45 342.45 0 01512.1 856a342.24 342.24 0 01-243.2-100.8c-9.9-9.9-19.2-20.4-27.8-31.4l60.2-47a8 8 0 00-3-14.1l-175.7-43c-5-1.2-9.9 2.6-9.9 7.7l-.7 181c0 6.7 7.7 10.5 12.9 6.3l56.4-44.1C258.2 868.9 377.8 932 512.2 932c229.2 0 415.5-183.7 419.8-411.8a8 8 0 00-8-8.2z"
              />
            </svg>
          </span>
          <span>
            Refresh
          </span>
        </button>
      </div>
      <div
        className="ant-table-wrapper"
      >
        <div
          className="ant-spin-nested-loading"
        >
          <div
            className="ant-spin-container"
          >
            <div
              className="ant-table ant-table-empty"
            >
              <div
                className="ant-table-container"
              >
                <div
                  className="ant-table-content"
                  onScroll={[Function]}
                  style={Object {}}
                >
                  <table
                    style={
                      Object {
                        "tableLayout": "auto",
                      }
                    }
                  >
                    <colgroup />
                    <thead
                      className="ant-table-thead"
                    >
                      <tr>
                        <th
                          className="ant-table-cell ant-table-column-has-sorters"
                          colSpan={null}
                          onClick={[Function]}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="ant-table-column-sorters"
                          >
                            <span>
                              Name
                            </span>
                            <span
                              className="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                className="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  className="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  className="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          className="ant-table-cell ant-table-column-has-sorters"
                          colSpan={null}
                          onClick={[Function]}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="ant-table-column-sorters"
                          >
                            <span>
                              Email
                            </span>
                            <span
                              className="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                className="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  className="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  className="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          className="ant-table-cell ant-table-column-has-sorters"
                          colSpan={null}
                          onClick={[Function]}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="ant-table-column-sorters"
                          >
                            <span>
                              Role
                            </span>
                            <span
                              className="ant-table-column-sorter ant-table-column-sorter-full"
                            >
                              <span
                                className="ant-table-column-sorter-inner"
                              >
                                <span
                                  aria-label="caret-up"
                                  className="anticon anticon-caret-up ant-table-column-sorter-up"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-up"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                    />
                                  </svg>
                                </span>
                                <span
                                  aria-label="caret-down"
                                  className="anticon anticon-caret-down ant-table-column-sorter-down"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="caret-down"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                        </th>
                        <th
                          className="ant-table-cell"
                          colSpan={null}
                          rowSpan={null}
                          style={Object {}}
                        >
                          Actions
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      className="ant-table-tbody"
                    >
                      <tr
                        className="ant-table-placeholder"
                        style={
                          Object {
                            "display": null,
                          }
                        }
                      >
                        <td
                          className="ant-table-cell"
                          colSpan={4}
                          rowSpan={null}
                          style={Object {}}
                        >
                          <div
                            className="ant-empty"
                          >
                            <div
                              className="ant-empty-image"
                            >
                              <img
                                alt="empty"
                                src="no_data.png"
                              />
                            </div>
                            <p
                              className="ant-empty-description"
                            >
                              <span>
                                No user found
                              </span>
                            </p>
                            <div
                              className="ant-empty-footer"
                            />
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="button-action"
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <div
      className=""
    >
      <button
        className="ant-btn ant-btn-primary ant-btn-circle ant-btn-icon-only button"
        onClick={[Function]}
        type="button"
      >
        <span
          aria-label="plus"
          className="anticon anticon-plus"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="plus"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
            />
            <path
              d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
]
`;
